// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generate js should throw 1 1`] = `"schema is invalid: data/type must be "object""`;

exports[`generate js should throw 2 1`] = `"schema is invalid: data/properties must be object"`;

exports[`generate js should throw 3 1`] = `
"
  [{"instancePath":"","schemaPath":"#/required","keyword":"required","params":{"missingProperty":"FOO"},"message":"must have required property 'FOO'"}]"
`;

exports[`generate js should throw 4 1`] = `
"
  [{"instancePath":"/FOO","schemaPath":"#/properties/FOO/type","keyword":"type","params":{"type":"number"},"message":"must be number"}]
  [{"instancePath":"/BAR/BAZ","schemaPath":"#/properties/BAR/properties/BAZ/type","keyword":"type","params":{"type":"number"},"message":"must be number"}]"
`;

exports[`generate js should works (envFile + userEnvironment) 1`] = `
"// Generated by '@runtime-env/cli'

globalThis.runtimeEnv = {
  "FOO": "override",
  "BAR": {"BAZ":"value"},
}
"
`;

exports[`generate js should works (envFile only) 1`] = `
"// Generated by '@runtime-env/cli'

globalThis.runtimeEnv = {
  "FOO": "escape\\u003C",
  "BAR": {"BAZ":"value"},
}
"
`;

exports[`generate js should works (userEnvironment only) 1`] = `
"// Generated by '@runtime-env/cli'

globalThis.runtimeEnv = {
  "FOO": "override",
  "BAR": undefined,
}
"
`;

exports[`generate ts should works 1`] = `
"// Generated by '@runtime-env/cli'

type Primitive = undefined | null | boolean | string | number;

type Immutable<T> = T extends Primitive ? T : T extends Array<infer U> ? ReadonlyArray<U> : Readonly<T>;

type DeepImmutable<T> = T extends Primitive
  ? T
  : T extends Array<infer U>
  ? DeepImmutableArray<U>
  : DeepImmutableObject<T>;

interface DeepImmutableArray<T> extends ReadonlyArray<DeepImmutable<T>> {}

type DeepImmutableObject<T> = {
  readonly [K in keyof T]: DeepImmutable<T[K]>;
};

declare const runtimeEnv: DeepImmutable<{
  FOO: string;
  BAR?: {
    BAZ?: string;
  };
}>
"
`;
